# mlx-nufft

./: .gitignore  .zenodo.json  ACCEPTANCE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
harness/: bench_batch.py  bench_batched.py  bench_cpu.py  bench_frames.py  bench_gpu.py  bench_multiplier.py  compare_acceptance.py  demo_df64.py  diagnose_ref.py  gen.py  probe_sizing.py  run_acceptance.py  run_paper_suite.sh  run_tests.py  test_api_parity.py  test_expi.py  test_gpu_small.py  test_large_t3_batch.py  test_type1_batch.py  test_type1_setsources_gpu.py  test_types12.py  test_vkfft_backend.py  validate_ref.py
harness/fft_backend_bench/: README.md  bench_mlx_fft.py  mpsgraph_fft.swift  vkfft_bench.cpp  vkfft_verify.cpp
mlx_nufft/: __init__.py  api.py  dfmath.py  gpu_t3.py  nd.py  ref_t3.py  sizing.py  types12.py  vkfft_backend.py
vkfft_bridge/: README.md  build.sh  vkfft_bridge.cpp
