[project]
name = "mlx-nufft"
version = "0.1.2"
description = "Non-uniform FFTs (types 1/2/3, dims 1/2/3) on Apple GPUs via Metal/MLX"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Martin Lachaine" }]
keywords = ["nufft", "nonuniform-fft", "fft", "apple-silicon", "metal", "mlx", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    # mlx pinned: this library works around version-specific Metal FFT
    # behaviour (native lengths <=4096 / pow2; Bluestein otherwise).
    # Re-validate harness/test_gpu_small.py before bumping.
    "mlx==0.31.2",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "finufft==2.5.1",   # CPU oracle for validation/benchmarks
    "scipy>=1.14",      # complex64 reference FFTs in diagnostics
]

[project.urls]
Homepage = "https://github.com/martinlachaine/mlx-nufft"
Repository = "https://github.com/martinlachaine/mlx-nufft"
Issues = "https://github.com/martinlachaine/mlx-nufft/issues"
Changelog = "https://github.com/martinlachaine/mlx-nufft/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mlx_nufft"]
